Refactoring data-sync with dev

--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/ColumnData.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/ColumnData.razor
@@ -12,7 +12,7 @@
     public bool Clickable { get; set; } = true;
 
     [CascadingParameter]
-    public IxDataView DataView { get; set; }
+    public AxoDataView DataView { get; set; }
 
     protected override void OnInitialized()
     {
