--- a/src/data/src/AXOpen.Data.Blazor/Views/AxoDataView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/Views/AxoDataView.razor
@@ -404,7 +404,7 @@ else
 @code {
 
     [Parameter]
-    public IDataViewModel Vm { get; set; }
+    public IAxoDataViewModel Vm { get; set; }
 
     [Parameter]
     public string Presentation { get; set; }
