--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/_Host.cshtml
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/_Host.cshtml
@@ -11,7 +11,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="integration.blazor.styles.css" rel="stylesheet" />
+    <link href="axopen_integrations_blazor.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
