--- a/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">integration.blazor</a>
+        <a class="navbar-brand" href="">axopen_integrations_blazor</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
