--- a/src/integrations/src/AXOpen.Integrations.Blazor/_Imports.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/_Imports.razor
@@ -6,7 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using integration.blazor
+@using axopen_integrations_blazor
 @using axopen_integrations_blazor.Shared
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using axopen_integrations
