--- a/src/core/src/AXOpen.Core.Blazor/AxoComponent/AxoComponentView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoComponent/AxoComponentView.razor
@@ -18,7 +18,20 @@
     </div>
    
     <div class="card-body">
-        <RenderableContentControl Presentation="@currentPresentation" Context="@Header" Class="bg-light rounded-3 shadow" LayoutClass="align-items-end" />
+        <RenderableContentControl Context="this.Component._isManuallyControllable" Presentation="Control"></RenderableContentControl>
+        @if (@Component._isManuallyControllable.Cyclic)
+        {
+            <RenderableContentControl Presentation="Command-Control" Context="@Header"
+                                      Class="bg-light rounded-3 shadow"
+                                      LayoutClass="align-items-end"/>
+        }
+        else
+        {
+            <RenderableContentControl Presentation="Status-Display"
+                                      Context="@Header"
+                                      Class="bg-light rounded-3 shadow"
+                                      LayoutClass="align-items-end"/>
+        }
     </div>
 
     @if (containsDetailsAttribute)
