--- a/src/templates.simple/axosimple.app/Pages/Index.razor
+++ b/src/templates.simple/axosimple.app/Pages/Index.razor
@@ -2,24 +2,4 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hi!</h1>
-<p>
-    For more information see: 
-</p>
-<p>
-    <a href="https://axcite.me">Simatic AX</a>
-</p>
-<p>
-    <a href="https://www.axsharp.com">AX# web site and documentation</a>
-</p>
-
-<p>
-    <a href="https://github.com/ix-ax/axsharp">AX# source repository</a>
-</p>
-
-<p>
-    <a href="https://dotnet.microsoft.com/en-us/apps/aspnet/web-apps/blazor">Build Blazor</a>
-</p>
-<p>
-    <a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Bootstrap</a>
-</p>
+<a href="/ui/SampleControlledUnit" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Sample controlled unit</a>
