--- a/src/templates.simple/axosimple.app/Shared/NavMenu.razor
+++ b/src/templates.simple/axosimple.app/Shared/NavMenu.razor
@@ -7,7 +7,7 @@
         <nav class="flex-column">
             <MenuItem Name="Home" Link="/" Icon="oi oi-home" />
             <ExpandableMenuItem Name="UI" Icon="oi oi-align-center">
-                <MenuItem Name="Auto UI" Link="/ui/autoui" Icon="oi oi-cog" />
+                <MenuItem Name="Auto UI" Link="/ui/SampleControlledUnit" Icon="oi oi-cog" />
                 <MenuItem Name="Manual UI" Link="/ui/manualui" Icon="oi oi-cog" />
             </ExpandableMenuItem>
         </nav>
