--- a/src/integrations/integration.blazor/Shared/NavMenu.razor
+++ b/src/integrations/integration.blazor/Shared/NavMenu.razor
@@ -28,6 +28,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="AxoToggleTask">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoToggleTask
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="AxoRemoteTask">
                 <span class="oi oi-plus" aria-hidden="true"></span> AxoRemoteTask
             </NavLink>
@@ -57,17 +62,6 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> AxoDataRemote
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="ixdata">
-                <span class="oi oi-plus" aria-hidden="true"></span> IxData.Data
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="IxDataRemote">
-                <span class="oi oi-plus" aria-hidden="true"></span> IxData.Data
-            </NavLink>
-        </div>
-        
     </nav>
 </div>
 
