--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoCore/AxoToggleTask.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoCore/AxoToggleTask.razor
@@ -1,12 +1,12 @@
 ﻿@page "/AxoToggleTask"
-@using intergrations
+@using axopen_integrations
 @using AXOpen.Core;
 <h3>AxoToggleTask</h3>
 
 <div class="container">
     <div class="card">
         <div class="card-header d-flex">
-            <div class="h4 p-0 w-100 mb-4 text-primary border-bottom border-primary">Simple Command Task Example.</div>
+            <div class="h4 p-0 w-100 mb-4 text-primary border-bottom border-primary">Simple Toggle Task Example.</div>
         </div>
         <div class="card card-body">
             <div class="container text-left">
@@ -17,12 +17,12 @@
                             <RenderableContentControl Context="@Entry.Plc.AxoToggleTasks" Presentation="Command" Class="ps-2" />
                         </div>
                         <div class="card ps-2">
-                            <label>AxoToggleTaskCommandView Component="@Entry.Plc.AxoToggleTasks._toggleTask1"</label>
-                            <AxoToggleTaskCommandView Component="@Entry.Plc.AxoToggleTasks._toggleTask1"/>
+                            <label>AxoToggleTaskView Component="@Entry.Plc.AxoToggleTasks._toggleTask1" Disable=false </label>
+                            <AxoToggleTaskView Component="@Entry.Plc.AxoToggleTasks._toggleTask1" Disable=false />
                         </div>
                         <div class="card ps-2">
-                            <label>AxoToggleTaskCommandView Component="@Entry.Plc.AxoToggleTasks._toggleTask2"</label>
-                            <AxoToggleTaskCommandView Component="@Entry.Plc.AxoToggleTasks._toggleTask2"/>
+                            <label>AxoToggleTaskView Component="@Entry.Plc.AxoToggleTasks._toggleTask2" Disable=false </label>
+                            <AxoToggleTaskView Component="@Entry.Plc.AxoToggleTasks._toggleTask2" Disable=false />
                         </div>
                         <div class="card ps-2">
                             <label>RenderableContentControl Context="@Entry.Plc.AxoToggleTasks" Presentation="Control"</label>
@@ -35,12 +35,12 @@
                             <RenderableContentControl Context="@Entry.Plc.AxoToggleTasks" Presentation="Status" Class="ps-2" />
                         </div>
                         <div class="card ps-2">
-                            <label>AxoToggleTaskStatusView Component="@Entry.Plc.AxoToggleTasks._toggleTask1"</label>
-                            <AxoToggleTaskStatusView Component="@Entry.Plc.AxoToggleTasks._toggleTask1" />
+                            <label>AxoToggleTaskView Component="@Entry.Plc.AxoToggleTasks._toggleTask1" Disable=true </label>
+                            <AxoToggleTaskView Component="@Entry.Plc.AxoToggleTasks._toggleTask1" Disable=true />
                         </div>
                         <div class="card ps-2">
-                            <label>AxoToggleTaskStatusView Component="@Entry.Plc.AxoToggleTasks._toggleTask2"</label>
-                            <AxoToggleTaskStatusView Component="@Entry.Plc.AxoToggleTasks._toggleTask2" />
+                            <label>AxoToggleTaskView Component="@Entry.Plc.AxoToggleTasks._toggleTask2" Disable=true </label>
+                            <AxoToggleTaskView Component="@Entry.Plc.AxoToggleTasks._toggleTask2" Disable=true />
                         </div>
                         <div class="card ps-2">
                             <label>RenderableContentControl Context="@Entry.Plc.AxoToggleTasks" Presentation="Display"</label>
