--- a/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="AxoMomentaryTask">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoMomentaryTask
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="AxoRemoteTask">
                 <span class="oi oi-plus" aria-hidden="true"></span> AxoRemoteTask
             </NavLink>
