--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Command/AxoDataExchangeCommandView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Command/AxoDataExchangeCommandView.razor
@@ -1,7 +1,5 @@
 ﻿@namespace AXOpen.Data
 @inherits RenderableViewModelComponentBase<AxoDataExchangeCommandViewModel>
 
-<AxoDataView Vm="@ViewModel.DataViewModel" Presentation="Command" ModalDataView="false" CanExport="true">
-    <AXOpen.Core.AxoDataExchange.ColumnData HeaderName="Recipe name" BindingValue="RecipeName" Clickable="false" />
-    <AXOpen.Core.AxoDataExchange.ColumnData BindingValue="String1" />
-</AxoDataView>
+<AxoDataView Vm="@ViewModel.DataViewModel" Presentation="Command" ModalDataView="false" CanExport="true"/>
+   
