--- a/src/templates.simple/axosimple.app/Components/UnitsSequences.razor
+++ b/src/templates.simple/axosimple.app/Components/UnitsSequences.razor
@@ -1,17 +1,20 @@
 ﻿@using AXOpen.Core;
-@inherits RenderableComplexComponentBase<axosimple.SampleControlledUnit.ControlledUnit>
+@inherits RenderableComplexComponentBase<AXSharp.Connector.ITwinObject>
 
 <div class="container">
+    <div class="row">
+        <h1>@Component.AttributeName</h1>
+    </div>
     <!-- TOP LEVEL TASKS -->
     <div class="row">
         @foreach (var task in this.Component.GetChildren().OfType<AxoTask>())
         {
-            <div class="col-md-4">
-                <AxoTaskCommandView Component="@task" />
+            <div class="col-auto">
+                <AxoTaskCommandView Component="@task"/>
             </div>
         }
     </div>
-    
+
     <!-- TASK DETAILS -->
     <div class="row">
         @foreach (var o in Component.GetChildren().OfType<AxoSequencer>())
@@ -22,16 +25,6 @@
                 <AxoSequencerView Component="@axoSequencer"></AxoSequencerView>
             }
         }
-
-        @if (Component.ServiceMode.Status.Cyclic == (ushort)eAxoTaskState.Busy)
-        {
-            <RenderableContentControl Context="Component.Components" Presentation="Command-Control"/>
-        }
-    </div>
-
-    <div>
-        <RenderableContentControl Context="Entry.Plc.Inputs" Presentation="Control"></RenderableContentControl>
-        <RenderableContentControl Context="Entry.Plc.Outputs" Presentation="Control"></RenderableContentControl>
     </div>
 </div>
 
