--- a/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
@@ -68,6 +68,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> AxoDataRemote
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="DocuExamples">
+                <span class="oi oi-plus" aria-hidden="true"></span> DocuExamples
+            </NavLink>
+        </div>
     </nav>
 </div>
 
