--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/DocuExamples.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/DocuExamples.razor
@@ -10,8 +10,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="AxoToggleTask">
-                <span class="oi oi-plus" aria-hidden="true"></span> AxoToggleTask
+            <NavLink class="nav-link" href="AxoToggleTaskDocu">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoToggleTaskDocu
             </NavLink>
         </div>
         <div class="nav-item px-3">
