--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/DocuExamples.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/DocuExamples.razor
@@ -15,8 +15,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="AxoMomentaryTask">
-                <span class="oi oi-plus" aria-hidden="true"></span> AxoMomentaryTask
+            <NavLink class="nav-link" href="AxoMomentaryTaskDocu">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoMomentaryTaskDocu
             </NavLink>
         </div>
     </nav>
