--- a/src/templates.simple/axosimple.app/Components/UnitsData.razor
+++ b/src/templates.simple/axosimple.app/Components/UnitsData.razor
@@ -9,7 +9,7 @@
         Process Data
     </div>
     <div class="card-body">
-        <RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.Data._data" Presentation="Display" />
+        <RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData.Set" Presentation="Display" />
     </div>
 </div>
 
