--- a/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample.razor
@@ -2,5 +2,5 @@
 @using axosimple.hmi.Components;
 <UnitsSequences Component="@Entry.Plc.Context.PneumaticManipulator" PollingInterval="100"></UnitsSequences>
 <UnitsService ServiceTask="@Entry.Plc.Context.PneumaticManipulator.ServiceMode" Components="@Entry.Plc.Context.PneumaticManipulator.Components"></UnitsService>
-<UnitsData Data="Entry.Plc.Context.PneumaticManipulator.Data._data" PollingInterval="100"></UnitsData>
+<UnitsData Data="Entry.Plc.Context.PneumaticManipulator.ProcessData.Set" PollingInterval="100"></UnitsData>
 
