--- a/src/templates.simple/axosimple.app/Shared/NavMenu.razor
+++ b/src/templates.simple/axosimple.app/Shared/NavMenu.razor
@@ -9,6 +9,7 @@
             <ExpandableMenuItem Name="UI" Icon="oi oi-align-center">
                 <MenuItem Name="Controlled unit example" Link="/ui/ManipulatorExample" Icon="oi oi-cog" />
                 <MenuItem Name="I/O" Link="/ui/io" Icon="oi oi-cog" />
+                <MenuItem Name="Process data settings" Link="ui/ProcessData" Icon="oi oi-cog"></MenuItem>
             </ExpandableMenuItem>
         </nav>
     </div>
