additions and clean ups - apax version number updates only when package publishsing is reqested - cleans up simatic1500 and add simple IRtc implementation for S71500 targets - add time measurement to AxoTask - add start time signature to AxoTask - updates to ax#0.14..0-alpha.96

--- a/src/core/src/AXOpen.Core.Blazor/AxoCoordination/AxoStep/AxoStepView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoCoordination/AxoStep/AxoStepView.razor
@@ -23,6 +23,12 @@
         <div class="col">
             @Component.IsActive.Cyclic
         </div>
+        <div class="col">
+            @Component.Duration.Cyclic
+        </div>
+        <div class="col">
+            @Component.StartTimeStamp.Cyclic
+        </div>
     </div>
 </div>
 
