--- a/src/templates.simple/axosimple.app/Pages/_Host.cshtml
+++ b/src/templates.simple/axosimple.app/Pages/_Host.cshtml
@@ -22,6 +22,7 @@
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
 
+    <div id="components-reconnect-modal"></div>
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
             An error has occurred. This application may no longer respond until reloaded.
