--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/DocuExamples.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/DocuExamples.razor
@@ -19,5 +19,10 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> AxoMomentaryTaskDocu
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="DocuExamples/AxoDataDocuExamples">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoDataExamplesDocu
+            </NavLink>
+        </div>
     </nav>
 </div>
