--- a/src/core/src/AXOpen.Core.Blazor/AxoCoordination/AxoSequencer/AxoSequencerView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoCoordination/AxoSequencer/AxoSequencerView.razor
@@ -2,7 +2,7 @@
 @inherits RenderableComplexComponentBase<AxoSequencer>
 
 
-    <div class="card-body">
+<div class="card-body">
     <div class="row">
         <div class="col">
             @if (HasTaskControlButton)
@@ -20,40 +20,66 @@
     </div>
     @if (HasSettings)
     {
-        <div class="row">
-            <div class="col">
-                <RenderableContentControl Context="@Component.SequenceMode" Presentation="@(IsControllable ? "Control" : "Display")"/>
-            </div>
-            <div class="col">
-                <RenderableContentControl Context="@Component.SteppingMode" Presentation="@(IsControllable ? "Control" : "Display")"/>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <RenderableContentControl Context="@Component.SequenceMode" Presentation="@(IsControllable ? "Control" : "Display")"/>
+                </div>
+                <div class="col">
+                    <RenderableContentControl Context="@Component.SteppingMode" Presentation="@(IsControllable ? "Control" : "Display")"/>
+                </div>
             </div>
         </div>
     }
+
     @if (HasStepControls)
     {
-        <div class="row">
-            <div class="col">
-                <RenderableContentControl Context="@Component.StepBackwardCommand" Presentation="@(IsControllable ? "Command" : "Status")"/>
-            </div>
-            <div class="col">
-                <RenderableContentControl Context="@Component.StepIn" Presentation="@(IsControllable ? "Command" : "Status")"/>
-            </div>
-            <div class="col">
-                <RenderableContentControl Context="@Component.StepForwardCommand" Presentation="@(IsControllable ? "Command" : "Status")"/>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <RenderableContentControl Context="@Component.StepBackwardCommand" Presentation="@(IsControllable ? "Command" : "Status")"/>
+                </div>
+                <div class="col">
+                    <RenderableContentControl Context="@Component.StepIn" Presentation="@(IsControllable ? "Command" : "Status")"/>
+                </div>
+                <div class="col">
+                    <RenderableContentControl Context="@Component.StepForwardCommand" Presentation="@(IsControllable ? "Command" : "Status")"/>
+                </div>
             </div>
         </div>
     }
     @if (HasStepDetails)
     {
-        <div class="container" style="overflow-y: auto; height: 200px;">
-            <div class="row">
-                @foreach (var step in Steps.Where(p => p.Order.Cyclic != 0))
+        <div style="height: 300px; overflow: auto;">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Description</th>
+                    <th scope="col">Duration</th>
+                </tr>
+                </thead>
+                <tbody>
+                @foreach (var step in this.Steps.Where(p => p != null && p.Order.Cyclic != 0))
                 {
-                    <RenderableContentControl Context="step" Presentation="@(IsControllable ? "Command" : "Status")"/>
+                    if (step.IsActive.Cyclic)
+                    {
+                        <tr @ref="@activeStepReference" class="@UpdateStepRowColors(step)">
+                            <th scope="row">@UpdateStepDescription(step)</th>
+                            <td>@UpdateTotalDurationDisplay(step)</td>
+                        </tr>
+                    }
+                    else
+                    {
+                        <tr class="@UpdateStepRowColors(step)">
+                            <th scope="row">@UpdateStepDescription(step)</th>
+                            <td>@UpdateTotalDurationDisplay(step)</td>
+                        </tr>
+                    }
+
                 }
-            </div>
+                </tbody>
+            </table>
         </div>
-        
     }
 </div>
 
