--- a/src/BlazorAuthApp/Pages/Login.razor
+++ b/src/BlazorAuthApp/Pages/Login.razor
@@ -1,9 +1,9 @@
 ﻿@page "/Identity/Account/Login"
+@using AXOpen.Core;
+@using AXOpen.Core.blazor.Toaster;
 @using BlazorAuthApp.Identity.Models;
 @using BlazorAuthApp.Identity;
 @using CommunityToolkit.Mvvm.Messaging;
-@using ix.framework.core;
-@using ix.framework.core.blazor.Toaster;
 @inject NavigationManager _navigationManager
 
 <div class="card">
