--- a/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
@@ -5,6 +5,6 @@
 
 <div class="container-fluid">
     <div class="row">
-        <RenderableContentControl Context="@Entry.Plc.Context.ProductionSettings" Presentation="Command"></RenderableContentControl>
+        @*<RenderableContentControl Context="@Entry.Plc.Context.ProductionSettings" Presentation="Command"></RenderableContentControl>*@
     </div>
 </div>
