--- a/src/BlazorAuthApp/Pages/Login.razor
+++ b/src/BlazorAuthApp/Pages/Login.razor
@@ -1,9 +1,8 @@
-﻿@page "/Identity/Account/Login"
+﻿@page "/Identity/Account/Loginn"
 @using AXOpen.Core;
 @using AXOpen.Core.blazor.Toaster;
-@using BlazorAuthApp.Identity.Models;
-@using BlazorAuthApp.Identity;
 @using CommunityToolkit.Mvvm.Messaging;
+@using Security;
 @inject NavigationManager _navigationManager
 
 <div class="card">
