--- a/src/BlazorAuthApp/Shared/MainLayout.razor
+++ b/src/BlazorAuthApp/Shared/MainLayout.razor
@@ -10,13 +10,12 @@
     <main>
         <div class="top-row px-4 auth">
             <LoginDisplay />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
         <article class="content px-4">
             @Body
         </article>
 
-        <ix.framework.core.blazor.Toaster.Toaster />
+        <AXOpen.Core.blazor.Toaster.Toaster />
     </main>
 </div>
