--- a/src/Security/Views/SecurityManagementView.razor
+++ b/src/Security/Views/SecurityManagementView.razor
@@ -1,4 +1,6 @@
-﻿@namespace Security
+﻿@using Microsoft.AspNetCore.Components.Authorization;
+
+@namespace Security
 
 <AuthorizeView Roles="Administrator">
     <Authorized>
