--- a/src/Security/Views/UserManagementView.razor
+++ b/src/Security/Views/UserManagementView.razor
@@ -1,4 +1,5 @@
 ﻿@inject RoleGroupManager _roleGroupManager
+@using Microsoft.AspNetCore.Components.Forms
 @namespace Security
 
 <div class="card" style="min-height: 20vh; max-height: 40vh">
