--- a/src/BlazorAuthApp/Shared/NavMenu.razor
+++ b/src/BlazorAuthApp/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="security" Match="NavLinkMatch.All">
+                <span class="oi oi-plus" aria-hidden="true"></span> Security
+            </NavLink>
+        </div>
     </nav>
 </div>
 
