--- a/src/Security/Views/UserManagementView.razor
+++ b/src/Security/Views/UserManagementView.razor
@@ -19,11 +19,11 @@
             <tbody>
                 @foreach (UserData user in AllUsers)
                 {
-                    <tr @onclick="@(() => RowClicked(user))" class="@((SelectedUser != null) ? ((SelectedUser.UserName == user.Username) ? "table-active" : "") : "")">
-                        <th>@user.Username</th>
+                    <tr @onclick="@(() => RowClicked(user))" class="@((SelectedUser != null) ? ((SelectedUser.UserName == user.UserName) ? "table-active" : "") : "")">
+                        <th>@user.UserName</th>
                         <td>@user.CanUserChangePassword</td>
-                        <td>@user._Created</td>
-                        <td>@user._Modified</td>
+                        <td>@user.Created</td>
+                        <td>@user.Modified</td>
                     </tr>
                 }
             </tbody>
