--- a/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
@@ -74,6 +74,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="AxoMessagingStatic">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoMessagingStatic
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="DocuExamples">
                 <span class="oi oi-plus" aria-hidden="true"></span> DocuExamples
             </NavLink>
