--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/AxoColumnData.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/AxoColumnData.razor
@@ -11,7 +11,7 @@
     public bool Clickable { get; set; } = true;
 
     [CascadingParameter]
-    public AxoDataView DataView { get; set; }
+    public AxoDataExchangeView DataView { get; set; }
 
     protected override void OnInitialized()
     {
