--- a/src/data/src/AXOpen.Data.Blazor/_Imports.razor
+++ b/src/data/src/AXOpen.Data.Blazor/_Imports.razor
@@ -1,4 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using CommunityToolkit.Mvvm.ComponentModel;
-@using AXOpen.Data.ViewModels;
+@using AXOpen.Data;
