--- a/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
@@ -4,6 +4,11 @@
 
 <div class="container-fluid">
     <div class="row">
-        <RenderableContentControl Context="@Entry.Plc.Context.ProcessData" Presentation="Command"></RenderableContentControl>
+        <AxoDataExchangeView Vm="_vm"></AxoDataExchangeView>
     </div>
 </div>
+
+@code
+{
+    private AxoDataExchangeViewModel _vm = new AxoDataExchangeViewModel { Model = Entry.Plc.Context.ProcessData };
+}
