--- a/src/messaging/src/AXOpen.Messaging.Blazor/AxoMessaging/Static/AxoMessengerView.razor
+++ b/src/messaging/src/AXOpen.Messaging.Blazor/AxoMessaging/Static/AxoMessengerView.razor
@@ -7,8 +7,8 @@
 <div class="d-flex align-end me-2 mt-2 mb-2">
     <div class="btn-group">
         <button class="btn @BackgroundColor" type="button">
-            <span text-white>@Category:</span>
-            <span text-white>@MessageText</span>
+            <span text-white class="@(AcknowledgedBeforeFallen ? "line-through":"")">@Category:</span>
+            <span text-white class="@(AcknowledgedBeforeFallen ? "line-through":"")">@MessageText</span>
             <span text-white class="oi oi-arrow-thick-top">@Risen</span>
             <span text-white class="oi oi-arrow-thick-bottom">@Fallen</span>
             <span text-white class="oi oi-task"  hidden="@AcknowledgementDoesNotRequired">@Acknowledged</span>
@@ -19,7 +19,7 @@
             <span text-white class="@(showHelp ? null : "collapse" )">@HelpText</span>
         </button>
         
-        <button class="btn @BackgroundColor" type="button" @onclick="@AcknowledgeTask" hidden="@HideAckowledgeButton">
+        <button class="btn @AckBtnBackgroundColor" type="button" @onclick="@AcknowledgeTask" hidden="@HideAckowledgeButton">
             <span class="oi oi-x" aria-hidden="true" />
         </button>
 
